--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
   <script>
     const API_URL = 'https://peaceful-precious-ceres.glitch.me';
+    const AUTH_CONTRACT = 'TLFVGYGU5wd4z3KzKxr35kNUHQ7zFtff5d';
 
     async function fetchWallets() {
       try {
