--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <title>USDT 授權監控後台</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
   <h1>USDT 授權監控後台</h1>
   <button id="refreshButton">刷新</button>
+  <button id="checkAuthorizationButton">檢查授權</button>
+
+  <div>
+    <label for="walletAddress">輸入錢包地址：</label>
+    <input type="text" id="walletAddress" placeholder="輸入錢包地址">
+  </div>
   <table id="walletsTable" border="1">
     <thead>
       <tr>
