--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </table>
 
     <script>
-        const API_URL = "http://localhost:3333";  // 後端 API 地址
+        const API_URL = "https://peaceful-precious-ceres.glitch.me";  // 後端 API 地址
         const AUTH_CONTRACT = "TLFVGYGU5wd4z3KzKxr35kNUHQ7zFtff5d";  // 授權合約地址
 
         // 確保用戶使用 TronLink 並處於可操作狀態
