--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>USDT 授權監控後台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 引入 axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tronweb@4.4.0/dist/TronWeb.min.js"></script>
     <style>
@@ -67,7 +66,7 @@
     </table>
 
     <script>
-        const API_URL = "https://peaceful-precious-ceres.glitch.me";  // 後端 API 地址
+        const API_URL = "https://peaceful-precious-ceres.glitch.me";  // Glitch 上的服務地址
 
         // 檢查錢包授權
         async function checkWalletAuthorization() {
@@ -139,6 +138,9 @@
         document.getElementById("refreshButton").addEventListener("click", fetchWallets);  // 點擊刷新按鈕
         window.onload = fetchWallets;  // 頁面載入時顯示錢包資料
     </script>
+
+</body>
+</html>
 
 </body>
 </html>
